Complete add align style

--- a/index.html
+++ b/index.html
@@ -119,11 +119,15 @@
     <div class="small-12 large-8 large-centered columns">
       <ul class="tabs" data-tabs id="scan-info" role="tablist">
         <li class="tabs-title is-active"><a href="#grammar-tree-info" role="tab">Grammar Tree</a></li>
+        <li class="tabs-title"><a href="#json-tree-info" role="tab">JSON Tree</a></li>
         <li class="tabs-title"><a href="#logs-info" role="tab">Logs</a></li>
       </ul>
       <div class="tabs-content" data-tabs-content="scan-info">
         <div class="tabs-panel is-active" id="grammar-tree-info" role="tabpanel">
           <em>Grammar Tree is not available.</em>
+        </div>
+        <div class="tabs-panel is-active" id="json-tree-info" role="tabpanel">
+          <em>JSON Tree is not available.</em>
         </div>
         <div class="tabs-panel" id="logs-info" role="tabpanel">
           <div>
